--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <section id="about" class="details-section">
             <h2 class="section-tag">&lt;about_me&gt;</h2>
             <p class="summary">
-                Currently pursuing B.E. ECE at AKT Academy (2022-2026)[cite: 109, 110]. 
+                Currently pursuing B.E. ECE at Jai Shriram Engineering College (2022-2026)[cite: 109, 110]. 
                 Specialized in image processing, IoT, and embedded systems[cite: 118, 122, 125].
             </p>
         </section>
@@ -88,4 +88,5 @@
     </main>
 
 </body>
+
 </html>
